269. Model 4: Building a multi-input model (hybrid token + character embeddings)

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -3298,9 +3298,107 @@
         "token_embeddings = tf_hub_embedding_layer(token_inputs)\n",
         "token_outputs = layers.Dense(128, activation=\"relu\")(token_embeddings)\n",
         "token_model = tf.keras.Model(inputs=token_inputs, \n",
-        "                             outputs=token_outputs)"
+        "                             outputs=token_outputs)\n",
+        "\n",
+        "# 2. Create a character-level model\n",
+        "char_inputs = layers.Input(shape=(1, ), dtype=tf.string, name=\"char_input\")\n",
+        "char_vectors = char_vectorizer(char_inputs)\n",
+        "char_embeddings = char_embed(char_vectors)\n",
+        "char_bi_lstm = layers.Bidirectional(layers.LSTM(24))(char_embeddings) # bi-LSTM shown in Figure 1 of https://arxiv.org/pdf/1612.05251.pdf\n",
+        "# hidden units of BiDirectional doubles, so 25 becomes 50, but we will use 24 (multiples of 8)\n",
+        "char_model = tf.keras.Model(char_inputs, char_bi_lstm)\n",
+        "\n",
+        "# 3. Concatenatate token and char inputs(create hybrid token embedding)\n",
+        "token_char_concat = layers.Concatenate(name=\"token_char_hybrid\")([token_model.output, \n",
+        "                                                                  char_model.output])\n",
+        "\n",
+        "# 4. Create output layer - adding in Dropout, discussed in section 4.2 of the paper.\n",
+        "combined_dropout = layers.Dropout(0.5)(token_char_concat) # randomly set input units to 0 with a rate , here it is 50%\n",
+        "combined_dense = layers.Dense(128, activation=\"relu\")(combined_dropout)\n",
+        "final_dropout = layers.Dropout(0.5)(combined_dense)\n",
+        "output_layer = layers.Dense(num_classes, activation=\"softmax\")(final_dropout)\n",
+        "\n",
+        "# 5. Construct model with char and token inputs\n",
+        "model_4 = tf.keras.Model(inputs=[token_model.input, char_model.input],\n",
+        "                         outputs = output_layer,\n",
+        "                         name=\"model_4_token_and_char_embeddings\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 117,
+      "execution_count": 119,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XqPtrE5ZfDDj",
+        "outputId": "02e782a0-4cae-4cda-9890-10a8980d98c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get a summary for our model\n",
+        "model_4.summary()"
+      ],
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_4_token_and_char_embeddings\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "char_input (InputLayer)         [(None, 1)]          0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "token_input (InputLayer)        [(None,)]            0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "char_vectorizer (TextVectorizat (None, 290)          0           char_input[0][0]                 \n",
+            "__________________________________________________________________________________________________\n",
+            "universal_sentence_encoder (Ker (None, 512)          256797824   token_input[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "char_embed (Embedding)          (None, 290, 25)      700         char_vectorizer[2][0]            \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_5 (Dense)                 (None, 128)          65664       universal_sentence_encoder[2][0] \n",
+            "__________________________________________________________________________________________________\n",
+            "bidirectional_1 (Bidirectional) (None, 48)           9600        char_embed[2][0]                 \n",
+            "__________________________________________________________________________________________________\n",
+            "token_char_hybrid (Concatenate) (None, 176)          0           dense_5[0][0]                    \n",
+            "                                                                 bidirectional_1[0][0]            \n",
+            "__________________________________________________________________________________________________\n",
+            "dropout (Dropout)               (None, 176)          0           token_char_hybrid[0][0]          \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_6 (Dense)                 (None, 128)          22656       dropout[0][0]                    \n",
+            "__________________________________________________________________________________________________\n",
+            "dropout_1 (Dropout)             (None, 128)          0           dense_6[0][0]                    \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_7 (Dense)                 (None, 5)            645         dropout_1[0][0]                  \n",
+            "==================================================================================================\n",
+            "Total params: 256,897,089\n",
+            "Trainable params: 99,265\n",
+            "Non-trainable params: 256,797,824\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kcpAy79teyw0"
+      },
+      "source": [
+        "# Compile the model\n",
+        "mdoel_4.compile(loss=\"categorical_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "model_4.summary()"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3309,16 +3407,11 @@
         "id": "61HcK-3YYnrF"
       },
       "source": [
-        "# Create a character-level model\n",
-        "char_inputs = layers.Input(shape=(1, ), dtype=tf.string, name=\"char_input\")\n",
-        "char_vectors = char_vectorizer(char_inputs)\n",
-        "char_embeddings = char_embed(char_vectors)\n",
-        "char_bi_lstm = layers.Bidirectional(layers.LSTM(24))(char_embeddings) # bi-LSTM shown in Figure 1 of https://arxiv.org/pdf/1612.05251.pdf\n",
-        "# hidden units of BiDirectional doubles, so 25 becomes 50, but we will use 24 (multiples of 8)\n",
-        "char_model = tf.keras.Model(char_inputs, char_bi_lstm)\n",
+        "\n",
+        "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 118,
       "outputs": []
     }
   ]
