271. Crafting multi-input fast loading tf.data datasets for Model 4

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -3451,7 +3451,7 @@
         "id": "9mLUGvQZzmp6"
       },
       "source": [
-        "## Creating datasets for our token + char model (make sure our data load as fast as possible)"
+        "## Combining token and character data into a tf.data.Dataset"
       ]
     },
     {
@@ -3460,7 +3460,76 @@
         "id": "LrKEyXqLz-p2"
       },
       "source": [
-        "combined_train_dataset = tf.data.Dataset.from_tensor_slices((train_sentences, train_chars, train_labels_one_hot)).batch(32).prefetch(tf.data.AUTOTUNE)"
+        "# Combine chars and tokens into a dataset\n",
+        "# Order of tuples here should match the order of inputs to the model inputs we passed above (model_4)\n",
+        "train_char_token_data = tf.data.Dataset.from_tensor_slices((train_sentences, train_chars)) # make data\n",
+        "train_char_token_labels = tf.data.Dataset.from_tensor_slices((train_labels_one_hot)) # make labels\n",
+        "train_char_token_dataset = tf.data.Dataset.zip((train_char_token_data, train_char_token_labels)) # combine data and labels\n",
+        "\n",
+        "# Prefetch and batch train data\n",
+        "train_char_token_dataset = train_char_token_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n"
+      ],
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JcgJP7mE2Jnw"
+      },
+      "source": [
+        "# Repeat the above steps for our validation data\n",
+        "val_char_token_data = tf.data.Dataset.from_tensor_slices((val_sentences, val_chars)) # make data\n",
+        "val_char_token_labels = tf.data.Dataset.from_tensor_slices((val_labels_one_hot)) # make labels\n",
+        "val_char_token_dataset = tf.data.Dataset.zip((val_char_token_data, val_char_token_labels)) # combine data and labels\n",
+        "\n",
+        "# Prefetch and batch train data\n",
+        "val_char_token_dataset = val_char_token_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n"
+      ],
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X4-yJSc72eDZ",
+        "outputId": "8d843022-7d77-4328-dcbb-a7ca7ae00cf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check up our training char and token embedding dataset\n",
+        "train_char_token_dataset, val_char_token_dataset"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<PrefetchDataset shapes: (((None,), (None,)), (None, 5)), types: ((tf.string, tf.string), tf.float64)>,\n",
+              " <PrefetchDataset shapes: (((None,), (None,)), (None, 5)), types: ((tf.string, tf.string), tf.float64)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kae91GQB2mqj"
+      },
+      "source": [
+        "# Fit the combined model_4\n",
+        "\n",
+        "history_model_4 = model_4.fit(train_char_token_dataset,\n",
+        "                              epochs=3, \n",
+        "                              steps_per_epoch = int(0.1 *))\n"
       ],
       "execution_count": null,
       "outputs": []
