--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -3492,17 +3492,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X4-yJSc72eDZ",
-        "outputId": "8d843022-7d77-4328-dcbb-a7ca7ae00cf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X4-yJSc72eDZ",
+        "outputId": "4d1f5f06-6219-4d88-92a6-0bf3344f1bf1"
       },
       "source": [
         "# Check up our training char and token embedding dataset\n",
         "train_char_token_dataset, val_char_token_dataset"
       ],
-      "execution_count": 97,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3515,21 +3515,226 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 98
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Kae91GQB2mqj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kae91GQB2mqj",
+        "outputId": "99236fd8-c850-4693-9776-03b7e5305e88"
       },
       "source": [
         "# Fit the combined model_4\n",
         "\n",
         "history_model_4 = model_4.fit(train_char_token_dataset,\n",
         "                              epochs=3, \n",
-        "                              steps_per_epoch = int(0.1 *))\n"
+        "                              steps_per_epoch = int(0.1 * len(train_char_token_dataset)),\n",
+        "                              validation_data = val_char_token_dataset,\n",
+        "                              validation_steps = int(0.1 * len(val_char_token_dataset)))\n",
+        "\n"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "562/562 [==============================] - 83s 131ms/step - loss: 0.9829 - accuracy: 0.6063 - val_loss: 0.7850 - val_accuracy: 0.7064\n",
+            "Epoch 2/3\n",
+            "562/562 [==============================] - 71s 126ms/step - loss: 0.8095 - accuracy: 0.6870 - val_loss: 0.7243 - val_accuracy: 0.7247\n",
+            "Epoch 3/3\n",
+            "562/562 [==============================] - 67s 120ms/step - loss: 0.7775 - accuracy: 0.7060 - val_loss: 0.6899 - val_accuracy: 0.7397\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IYszRp0x5xmU",
+        "outputId": "9ed21b18-de8a-46a8-93c3-8fb52331b6af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate our model 4\n",
+        "\n",
+        "model_4.evaluate(val_char_token_dataset)"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "945/945 [==============================] - 49s 51ms/step - loss: 0.6946 - accuracy: 0.7360\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6946090459823608, 0.7359658479690552]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RyOXfUXB548F",
+        "outputId": "903d6aab-fabe-4588-90b2-eb498efa92b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make prediction probabilities for token-character model hybrid 4\n",
+        "model_4_pred_probs = model_4.predict(val_char_token_dataset)\n",
+        "model_4_pred_probs"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4.74372983e-01, 3.31567675e-01, 4.64080693e-03, 1.83279604e-01,\n",
+              "        6.13887748e-03],\n",
+              "       [3.95948589e-01, 3.59336525e-01, 3.20562674e-03, 2.39639699e-01,\n",
+              "        1.86955999e-03],\n",
+              "       [3.02566260e-01, 1.32711679e-01, 5.48775010e-02, 4.73976851e-01,\n",
+              "        3.58677544e-02],\n",
+              "       ...,\n",
+              "       [8.74003395e-04, 1.08385915e-02, 6.44457415e-02, 2.57059466e-04,\n",
+              "        9.23584640e-01],\n",
+              "       [4.95410524e-03, 5.24352938e-02, 1.80671886e-01, 2.37475825e-03,\n",
+              "        7.59563982e-01],\n",
+              "       [2.15479955e-01, 3.43219519e-01, 3.41454566e-01, 2.55268794e-02,\n",
+              "        7.43190721e-02]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LnvVjSXI6R2q",
+        "outputId": "38860bff-73cf-44f2-f569-78988214b071",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Format pred probs into pred labels\n",
+        "model_4_preds = tf.argmax(model_4_pred_probs, axis=1)\n",
+        "model_4_preds"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(30212,), dtype=int64, numpy=array([0, 0, 3, ..., 4, 4, 1])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sUPCAfU16ac3",
+        "outputId": "bf82c79f-c470-43e7-dfd6-dcdbe03a17ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate model_4 performance (token-char hybrid model)\n",
+        "model_4_results = calculate_results(y_true = val_labels_encoded,\n",
+        "                                    y_pred = model_4_preds)\n",
+        "model_4_results"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 73.59658413875282,\n",
+              " 'f1': 0.733933102787293,\n",
+              " 'precision': 0.7366299520449492,\n",
+              " 'recall': 0.7359658413875282}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3UhKsUlH7wqn",
+        "outputId": "c95d7947-674a-4039-d4a7-f000d219b8eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_1_results"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 78.66079703429101,\n",
+              " 'f1': 0.7841294180722564,\n",
+              " 'precision': 0.7837225919679628,\n",
+              " 'recall': 0.7866079703429101}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WkxH91F37zK0"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
