274. Encoding the line number feature to used with Model 5

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -3878,11 +3878,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XfwuwCVlJxrX",
-        "outputId": "ab727204-01e9-4c39-f08d-f1987039a0fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XfwuwCVlJxrX",
+        "outputId": "ab727204-01e9-4c39-f08d-f1987039a0fa"
       },
       "source": [
         "# How many different line numbers are there\n",
@@ -3939,12 +3939,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MxoE9yNQJ-fj",
-        "outputId": "60daeb0a-deee-4b10-94aa-3e3cc7dffdc1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        }
+        },
+        "id": "MxoE9yNQJ-fj",
+        "outputId": "60daeb0a-deee-4b10-94aa-3e3cc7dffdc1"
       },
       "source": [
         "# Check the distribution of \"line_number\" column\n",
@@ -3982,11 +3982,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YX1DHJ-JKa8v",
-        "outputId": "5655e8da-68cd-4cc8-9436-4ebbab569967",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YX1DHJ-JKa8v",
+        "outputId": "5655e8da-68cd-4cc8-9436-4ebbab569967"
       },
       "source": [
         "# Use tensorflow to create one-hot-encoded tensors of our \"line_number\" column\n",
@@ -4030,13 +4030,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LVfiZX1eKvUs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LVfiZX1eKvUs",
+        "outputId": "49c768af-82c7-40ed-a2c4-530a9330c634"
       },
       "source": [
-        ""
+        "# How many totallines are there\n",
+        "train_df[\"total_lines\"].value_counts()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11    24468\n",
+              "10    23639\n",
+              "12    22113\n",
+              "9     19400\n",
+              "13    18438\n",
+              "14    14610\n",
+              "8     12285\n",
+              "15    10768\n",
+              "7      7464\n",
+              "16     7429\n",
+              "17     5202\n",
+              "6      3353\n",
+              "18     3344\n",
+              "19     2480\n",
+              "20     1281\n",
+              "5      1146\n",
+              "21      770\n",
+              "22      759\n",
+              "23      264\n",
+              "4       215\n",
+              "24      200\n",
+              "25      182\n",
+              "26       81\n",
+              "28       58\n",
+              "3        32\n",
+              "30       31\n",
+              "27       28\n",
+              "Name: total_lines, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 131
+        }
+      ]
     }
   ]
 }
