276. Model 5: Building the foundations of a tribrid embedding model

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -4095,12 +4095,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xpnlwXEpMQBJ",
-        "outputId": "3ebdd816-e0b2-41c7-8e66-ef888f1f0605",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 284
-        }
+        },
+        "id": "xpnlwXEpMQBJ",
+        "outputId": "3ebdd816-e0b2-41c7-8e66-ef888f1f0605"
       },
       "source": [
         "# Check the distribution of \"total_lines\" column\n",
@@ -4138,11 +4138,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LPBl_tpNMasi",
-        "outputId": "ca2a6bd0-2df8-4149-a1ba-7643d5be9b38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LPBl_tpNMasi",
+        "outputId": "ca2a6bd0-2df8-4149-a1ba-7643d5be9b38"
       },
       "source": [
         "# Check the coverage of a \"total_lines\" value of 20\n",
@@ -4167,11 +4167,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VUiaGYOcMnKI",
-        "outputId": "12147504-f9ac-4db5-bada-3aa1a733ac55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VUiaGYOcMnKI",
+        "outputId": "dbe40e9e-9c94-4c07-8f98-a9864244960a"
       },
       "source": [
         "# Use TensorFlow to one-hot encode \"total_lines\" column\n",
@@ -4181,7 +4181,7 @@
         "\n",
         "train_total_lines_one_hot[:15], train_total_lines_one_hot.shape\n"
       ],
-      "execution_count": 139,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4223,14 +4223,68 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 139
+          "execution_count": 142
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4hXov9SaOZNw"
+      },
+      "source": [
+        "###  Building a tribrid embedding model\n",
+        "\n",
+        "1. Create a token-level model\n",
+        "2. Create a char-level model\n",
+        "3. Create a model for the \"line_number\" feature\n",
+        "4. Create a model for the \"total_lines\" feature\n",
+        "5. Combined the outputs of 1 & 2 using `tf.keras.layers.Concatentate`\n",
+        "6. Combine the outputs of 3, 4 , 5 using `tf.keras.layers.Concatenate`\n",
+        "7. Create an output layer to accept the tribried embedding and output label probabilities\n",
+        "8. Combine the inputs of 1 , 2 , 3, 4 and outputs of 7 into a `tf.keras.Model`\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4hXov9SaOZNw"
+        "id": "XePN71iQTxhO"
+      },
+      "source": [
+        "#1. Token inputs\n",
+        "token_inputs = layers.Input(shape=[], dtype=\"string\", name=\"token_inputs\")\n",
+        "token_embeddings = tf_hub_embedding_layer(token_inputs)\n",
+        "token_outputs = layers.Dense(128, activation=\"relu\")(token_embeddings)\n",
+        "token_model = tf.keras.Model(inputs = token_inputs, \n",
+        "                             outputs = token_outputs)\n",
+        "\n",
+        "# 2. Char level model\n",
+        "char_inputs = layers.Input(shape=(1, ), dtype=\"string\", name=\"char_inputs\")\n",
+        "char_vectors = char_vectorizer(char_inputs)\n",
+        "char_embeddings = char_embed(char_tokens)\n",
+        "char_bi_lstm = layers.Bidirectional(layers.LSTM(24))(char_embeddings)\n",
+        "char_model = tf.kera.Model(inputs = char_inputs, \n",
+        "                           outputs = char_bi_lstm)\n",
+        "\n",
+        "# 3. Line numbers model\n",
+        "line_number_inputs = layers.Input(shape=(1, 15), dtype=\"int\", name=\"line_number_inputs\")\n",
+        "line_number_outputs = layers.Dense(32, activation=\"relu\")(line_number_inputs)\n",
+        "line_number_model = tf.keras.Model(inputs = line_number_inputs, \n",
+        "                                   outputs = line_number_outputs)\n",
+        "\n",
+        "# Total Lines model\n",
+        "total_lines_inputs = layers.Input(shape=(1, 20), dtype=\"int\", name=\"total_line_inputs\")\n",
+        "total_line_outputs = layers.Dense(32, activation=\"relu\")(total_lines_inputs)\n",
+        "total_line_model = tf.keras.Model(inputs=total_lines_inputs,\n",
+        "                                  outputs=total_line_outputs)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dF1FowpCTs5M"
       },
       "source": [
         ""
