--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -4261,25 +4261,111 @@
         "# 2. Char level model\n",
         "char_inputs = layers.Input(shape=(1, ), dtype=\"string\", name=\"char_inputs\")\n",
         "char_vectors = char_vectorizer(char_inputs)\n",
-        "char_embeddings = char_embed(char_tokens)\n",
+        "char_embeddings = char_embed(char_vectors)\n",
         "char_bi_lstm = layers.Bidirectional(layers.LSTM(24))(char_embeddings)\n",
-        "char_model = tf.kera.Model(inputs = char_inputs, \n",
+        "char_model = tf.keras.Model(inputs = char_inputs, \n",
         "                           outputs = char_bi_lstm)\n",
         "\n",
         "# 3. Line numbers model\n",
-        "line_number_inputs = layers.Input(shape=(1, 15), dtype=\"int\", name=\"line_number_inputs\")\n",
-        "line_number_outputs = layers.Dense(32, activation=\"relu\")(line_number_inputs)\n",
+        "line_number_inputs = layers.Input(shape=(15,), dtype=tf.float32, name=\"line_number_input\")\n",
+        "x = layers.Dense(32, activation=\"relu\")(line_number_inputs)\n",
         "line_number_model = tf.keras.Model(inputs = line_number_inputs, \n",
-        "                                   outputs = line_number_outputs)\n",
+        "                                   outputs = x)\n",
         "\n",
-        "# Total Lines model\n",
-        "total_lines_inputs = layers.Input(shape=(1, 20), dtype=\"int\", name=\"total_line_inputs\")\n",
-        "total_line_outputs = layers.Dense(32, activation=\"relu\")(total_lines_inputs)\n",
-        "total_line_model = tf.keras.Model(inputs=total_lines_inputs,\n",
-        "                                  outputs=total_line_outputs)\n"
+        "#4. Total Lines model\n",
+        "total_lines_inputs = layers.Input(shape=(20,), dtype=tf.float32, name=\"total_line_input\")\n",
+        "y = layers.Dense(32, activation=\"relu\")(total_lines_inputs)\n",
+        "total_lines_model = tf.keras.Model(inputs=total_lines_inputs,\n",
+        "                                  outputs=y)\n",
+        "\n",
+        "#5. Combine token and char embeddings into a hybrid embedding 1 & 2\n",
+        "combined_embeddings = layers.Concatenate(name=\"char_token_hybrid_embedding\")([token_model.output, \n",
+        "                                                                             char_model.output])\n",
+        "z = layers.Dense(256, activation=\"relu\")(combined_embeddings)\n",
+        "z = layers.Dropout(0.5)(z)\n",
+        "\n",
+        "\n",
+        "# 6. Combined positional embedding with combined token and char embeddings\n",
+        "tribrid_embeddings = layers.Concatenate(name=\"char_token_positional_embedding\")([line_number_model.output,\n",
+        "                                                                                 total_lines_model.output,\n",
+        "                                                                                 z])\n",
+        "# 7. Create output layer\n",
+        "output_layer = layers.Dense(5, activation=\"softmax\", name=\"output_layer\")(tribrid_embeddings)\n",
+        "\n",
+        "# 8. Put together model with all kinds of inputs\n",
+        "model_5 = tf.keras.Model(inputs = [line_number_model.input, \n",
+        "                                   total_lines_model.input, \n",
+        "                                   token_model.input, \n",
+        "                                   char_model.input], \n",
+        "                         outputs =output_layer)\n"
       ],
-      "execution_count": null,
+      "execution_count": 147,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tUEAOyGZb1iS",
+        "outputId": "ded9ff0b-7767-4f79-96a3-a18585e5d077",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_5.summary()"
+      ],
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_19\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "char_inputs (InputLayer)        [(None, 1)]          0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "token_inputs (InputLayer)       [(None,)]            0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "char_vectorizer (TextVectorizat (None, 290)          0           char_inputs[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "universal_sentence_encoder (Ker (None, 512)          256797824   token_inputs[0][0]               \n",
+            "__________________________________________________________________________________________________\n",
+            "char_embed (Embedding)          (None, 290, 25)      700         char_vectorizer[7][0]            \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_20 (Dense)                (None, 128)          65664       universal_sentence_encoder[7][0] \n",
+            "__________________________________________________________________________________________________\n",
+            "bidirectional_5 (Bidirectional) (None, 48)           9600        char_embed[6][0]                 \n",
+            "__________________________________________________________________________________________________\n",
+            "char_token_hybrid_embedding (Co (None, 176)          0           dense_20[0][0]                   \n",
+            "                                                                 bidirectional_5[0][0]            \n",
+            "__________________________________________________________________________________________________\n",
+            "line_number_input (InputLayer)  [(None, 15)]         0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "total_line_input (InputLayer)   [(None, 20)]         0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_23 (Dense)                (None, 256)          45312       char_token_hybrid_embedding[0][0]\n",
+            "__________________________________________________________________________________________________\n",
+            "dense_21 (Dense)                (None, 32)           512         line_number_input[0][0]          \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_22 (Dense)                (None, 32)           672         total_line_input[0][0]           \n",
+            "__________________________________________________________________________________________________\n",
+            "dropout_6 (Dropout)             (None, 256)          0           dense_23[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "char_token_positional_embedding (None, 320)          0           dense_21[0][0]                   \n",
+            "                                                                 dense_22[0][0]                   \n",
+            "                                                                 dropout_6[0][0]                  \n",
+            "__________________________________________________________________________________________________\n",
+            "output_layer (Dense)            (None, 5)            1605        char_token_positional_embedding[0\n",
+            "==================================================================================================\n",
+            "Total params: 256,921,889\n",
+            "Trainable params: 124,065\n",
+            "Non-trainable params: 256,797,824\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
