279. Creating multi-level data input pipelines for Model 5 with the tf.data API

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -2538,7 +2538,7 @@
         "id": "lnksxTDxpUD-"
       },
       "source": [
-        "## Creating a character-level tokenizer"
+        "### Creating a character-level tokenizer"
       ]
     },
     {
@@ -2900,7 +2900,7 @@
         "id": "TB3QhXvZ1S72"
       },
       "source": [
-        "## Creating a character-level embedding"
+        "### Creating a character-level embedding"
       ]
     },
     {
@@ -3446,7 +3446,7 @@
         "id": "9mLUGvQZzmp6"
       },
       "source": [
-        "## Combining token and character data into a tf.data.Dataset"
+        "### Combining token and character data into a tf.data.Dataset"
       ]
     },
     {
@@ -4430,12 +4430,115 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "6N1f1SuMy4YG"
       },
       "source": [
-        ""
+        "### Create tribrid embedding datasets using tf.data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O4GHPqc72xdW"
+      },
+      "source": [
+        "# Create training and validation datasets (with all four kinds of input data)\n",
+        "train_char_token_pos_data = tf.data.Dataset.from_tensor_slices((train_line_numbers_one_hot, \n",
+        "                                                                 train_total_lines_one_hot, \n",
+        "                                                                 train_sentences, \n",
+        "                                                                 train_chars))\n",
+        "train_char_token_pos_labels = tf.data.Dataset.from_tensor_slices(train_labels_one_hot)# make train labels\n",
+        "train_char_token_pos_dataset = tf.data.Dataset.zip((train_char_token_pos_data, \n",
+        "                                                    train_char_token_pos_labels))\n",
+        "train_char_token_pos_dataset = train_char_token_pos_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "\n",
+        "# Do the same as above but for the validation dataset\n",
+        "val_char_token_pos_data = tf.data.Dataset.from_tensor_slices((val_line_numbers_one_hot, \n",
+        "                                                              val_total_lines_one_hot,\n",
+        "                                                              val_sentences,\n",
+        "                                                              val_chars))\n",
+        "val_char_token_pos_labels = tf.data.Dataset.from_tensor_slices(val_labels_one_hot)# make train labels\n",
+        "val_char_token_pos_dataset = tf.data.Dataset.zip((val_char_token_pos_data, \n",
+        "                                                  val_char_token_pos_labels))\n",
+        "val_char_token_pos_dataset = val_char_token_pos_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n"
+      ],
+      "execution_count": 224,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xrkE5DYb2dzn",
+        "outputId": "584e37c0-ad41-440c-8c20-1688aa4ffa72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check input shape\n",
+        "train_char_token_pos_dataset, val_char_token_pos_dataset"
+      ],
+      "execution_count": 225,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<PrefetchDataset shapes: (((None, 15), (None, 20), (None,), (None,)), (None, 5)), types: ((tf.float32, tf.float32, tf.string, tf.string), tf.float64)>,\n",
+              " <PrefetchDataset shapes: (((None, 15), (None, 20), (None,), (None,)), (None, 5)), types: ((tf.float32, tf.float32, tf.string, tf.string), tf.float64)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 225
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WGP9NIF25RvT",
+        "outputId": "39ef4e36-8aeb-4fa8-e23c-3b21c8032e62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(train_char_token_pos_dataset), len(val_char_token_pos_dataset)"
+      ],
+      "execution_count": 226,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5627, 945)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 226
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n4nhv7Xd5dwP"
+      },
+      "source": [
+        "### Fitting, evaluating and making predictions with our tribrid model\n",
+        "\n",
+        "history_model_5 = model_5.fit(train_char_token_pos_dataset, \n",
+        "                              epochs=3, \n",
+        "                              steps_per_epoch=int(0.1 * len(train_char_token_pos_dataset)),\n",
+        "                              validation_data =\n",
+        "                              )"
       ],
       "execution_count": null,
       "outputs": []
