280. Bringing SkimLit to life!!! (fitting and evaluating Model 5)

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -4471,11 +4471,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xrkE5DYb2dzn",
-        "outputId": "584e37c0-ad41-440c-8c20-1688aa4ffa72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xrkE5DYb2dzn",
+        "outputId": "584e37c0-ad41-440c-8c20-1688aa4ffa72"
       },
       "source": [
         "# Check input shape\n",
@@ -4501,11 +4501,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WGP9NIF25RvT",
-        "outputId": "39ef4e36-8aeb-4fa8-e23c-3b21c8032e62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WGP9NIF25RvT",
+        "outputId": "39ef4e36-8aeb-4fa8-e23c-3b21c8032e62"
       },
       "source": [
         "len(train_char_token_pos_dataset), len(val_char_token_pos_dataset)"
@@ -4529,7 +4529,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n4nhv7Xd5dwP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n4nhv7Xd5dwP",
+        "outputId": "f86e0402-2457-47ab-9b9a-5ac4bd250437"
       },
       "source": [
         "### Fitting, evaluating and making predictions with our tribrid model\n",
@@ -4537,8 +4541,136 @@
         "history_model_5 = model_5.fit(train_char_token_pos_dataset, \n",
         "                              epochs=3, \n",
         "                              steps_per_epoch=int(0.1 * len(train_char_token_pos_dataset)),\n",
-        "                              validation_data =\n",
+        "                              validation_data = val_char_token_pos_dataset,\n",
+        "                              validation_steps = int(0.1 * len(val_char_token_pos_dataset))\n",
         "                              )"
+      ],
+      "execution_count": 227,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "562/562 [==============================] - 36s 52ms/step - loss: 1.1003 - accuracy: 0.7204 - val_loss: 0.9791 - val_accuracy: 0.8115\n",
+            "Epoch 2/3\n",
+            "562/562 [==============================] - 28s 50ms/step - loss: 0.9668 - accuracy: 0.8169 - val_loss: 0.9499 - val_accuracy: 0.8235\n",
+            "Epoch 3/3\n",
+            "562/562 [==============================] - 26s 46ms/step - loss: 0.9502 - accuracy: 0.8236 - val_loss: 0.9384 - val_accuracy: 0.8291\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lFx23Tvr7AKF",
+        "outputId": "0a9e364e-2925-4be3-ad58-ec26e4fbb566",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make prediction probablities\n",
+        "\n",
+        "model_5_pred_probs = model_5.predict(val_char_token_pos_dataset)\n",
+        "model_5_pred_probs"
+      ],
+      "execution_count": 230,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.49440733, 0.10503859, 0.01022063, 0.37439698, 0.01593648],\n",
+              "       [0.57329863, 0.10411488, 0.03837654, 0.2780033 , 0.00620663],\n",
+              "       [0.26591134, 0.10874117, 0.10750038, 0.45516863, 0.06267847],\n",
+              "       ...,\n",
+              "       [0.04237326, 0.0954745 , 0.04226072, 0.03355821, 0.7863333 ],\n",
+              "       [0.03028538, 0.26828235, 0.06872488, 0.02699731, 0.60571015],\n",
+              "       [0.20043729, 0.55992776, 0.12855582, 0.0415173 , 0.06956194]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 230
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "itgRdRr27LFs",
+        "outputId": "65545015-9c96-4fbd-bdad-9db43f19a65b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn prediciton probabilities into pred\n",
+        "\n",
+        "model_5_preds = tf.argmax(model_5_pred_probs, axis=1)\n",
+        "model_5_preds"
+      ],
+      "execution_count": 231,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(30212,), dtype=int64, numpy=array([0, 0, 3, ..., 4, 4, 1])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 231
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LrCpG1Dm7bJz",
+        "outputId": "f2b8a286-baf8-44bf-e5bd-356baa3d4080",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate model 5 results\n",
+        "model_5_results = calculate_results(y_true = val_labels_encoded, \n",
+        "                                    y_pred = model_5_preds)\n",
+        "model_5_results"
+      ],
+      "execution_count": 233,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 83.38739573679332,\n",
+              " 'f1': 0.8328280846183697,\n",
+              " 'precision': 0.8326422542471428,\n",
+              " 'recall': 0.8338739573679332}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 233
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gql3PbJu86GH"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
